crates/xmtp_macro/tests/ui/retryable/conflicting_keys.rs
use xmtp_macro::Retryable;

#[derive(Retryable)]
enum E {
    #[retry(true, false)]
    Both,
}

fn main() {}
